--- a/npcs/tony_the_carp_sarducci.yaml
+++ b/npcs/tony_the_carp_sarducci.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Tony 'The Carp' Sarducci
+  name: Tony &#8220 The Carp &#8220 Sarducci
 
   #
   # The NPC artwork.
