--- a/npcs/claideighm_hot_pants_battleweave.yaml
+++ b/npcs/claideighm_hot_pants_battleweave.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Claideighm "Hot Pants" Battleweave
+  name: Claideighm Hot Pants Battleweave
 
   #
   # The NPC artwork.
