--- a/npcs/gruda_wheatsheaf_combfavor.yaml
+++ b/npcs/gruda_wheatsheaf_combfavor.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Gruda "Wheatsheaf" Combfavor
+  name: Gruda Wheatsheaf Combfavor
 
   #
   # The NPC artwork.
