--- a/npcs/khamal_headrender_algolunaka.yaml
+++ b/npcs/khamal_headrender_algolunaka.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Khamal "Headrender" Algolunaka
+  name: Khamal Headrender Algolunaka
 
   #
   # The NPC artwork.
