--- a/npcs/ordo_sureshot_shallowsmoke.yaml
+++ b/npcs/ordo_sureshot_shallowsmoke.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Ordo "Sureshot" Shallowsmoke
+  name: Ordo Sureshot Shallowsmoke
 
   #
   # The NPC artwork.
