--- a/npcs/steve_patch_yarrow.yaml
+++ b/npcs/steve_patch_yarrow.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Steve "Patch" Yarrow
+  name: Steve Patch Yarrow
 
   #
   # The NPC artwork.
