--- a/npcs/khedoldosh_the_lost.yaml
+++ b/npcs/khedoldosh_the_lost.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Khedoldosh, the lost
+  name: Khedoldosh the lost
 
   #
   # The NPC artwork.
