--- a/npcs/race_abilities.yaml
+++ b/npcs/race_abilities.yaml
@@ -566,18 +566,18 @@
        
        
    - - Fairy Abilities:
-       - Fairy Flight: You have a flying speed equal to your walking speed and can hover. This flight is magical and does not require the use of your wings (if you have them).
-       - Fairy Magic: You know the druidcraft and faerie fire spells. You can cast faerie fire without expending a spell slot, and you must finish a long rest before you can cast it this way again. You can also cast this spell
-                      using any spell slots you have. Your spellcasting ability for these spells is your choice of Intelligence, Wisdom, or Charisma.
-       - Fey Passage: You can squeeze through a space as narrow as 1 inch wide.
+       - Fairy Magic: Fairies are magical by nature. At 1st level, you know the druidcraft cantrip. As you level, you'll pick up two additional spells, faerie fire and enlarge/reduce. You can cast one of these spells for free 
+                      once per long rest. If you have spell slots of the appropriate level, you can use them to cast either of these spells. When you select the fairy race for your character, you'll choose Intelligence, Wisdom, 
+                      or Charisma as your spellcasting ability for these spells.
+       - Flight: Your wings aren't just for show. You have a flying speed that is equal to your walking speed. Like the aarakocra, you can't fly if you're wearing medium or heavy armor.
        
        
    - - Rabbitfolk Abilities:
        - Hare-Trigger: You add your proficiency bonus to your initiative rolls.
        - Leporine Senses: You have proficiency in the Perception skill.
        - Lucky Footwork: When you fail a Dexterity saving throw, you can use your reaction to roll a d4 and add it to the result, potentially turning the failure into a success.
-       - Rabbit Hop: Once during each of your turns when you walk at least 5 feet, you can hop, rolling a d12 and moving that many feet in a direction of your choice. This extra distance doesn’t cost movement, but you can hop
-                     only if your speed isn’t 0.
+       - Rabbit Hop: Using your bonus action, you can jump a number of feet equal to 5 times your proficiency bonus. When you jump in this way you do not provoke attacks of opportunity. You can use this a number of times equal 
+                     to your proficiency bonus unless your speed has been reduced to zero. While great in combat, this has a variety of uses, especially as you level
                      
                      
    - - Dhampir Abilities:
@@ -964,3 +964,67 @@
        - Darkvision: you can see in dim light within 60 feet as if it were bright light, and in darkness as if it were dim light
        - Natural Armor: You have a tough rigid carapace. When you aren't wearing armor, your AC is 13 +your Dexterity modifier. You can use your natural armor to determine your AC if your armor would leave you with a lower AC. 
                         A shield's benefits apply normally while you use your natural armor.
+                        
+                        
+                        
+   - - Astral Elf Abilities:
+       - Astral Fire: You know one of the following cantrips of your choice; dancing lights, light, or sacred flame. Intelligence, Wisdom, or Charisma is your spellcasting ability for it (choose when you select this race).
+       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light and in darkness as if it were dim light. You discern colors in that darkness only as shades of gray.
+       - Fey Ancestry: You have advantage on saving throws you make to avoid or end the charmed condition on yourself. Keen Senses. You have proficiency in the Perception skill.
+       - Radiant Soul: When you succeed on a death save, you can regain a number of hit points equal to your proficiency bonus + your Intelligence, Wisdom, or Charisma modifier (choose when you select this race). You can’t use 
+                       this trait again until you finish a long rest.
+       - Trance: You don’t need to sleep, and magic can’t put you to sleep. You can finish a long rest in 4 hours if you spend those hours in a trancelike meditation, during which you remain conscious.
+       - Trance Proficiencies: Whenever you finish a long rest using your Trance trait, you gain two proficiencies, each one with a weapon or a tool of your choice (selected from the “Equipment” chapter of the Player’s Handbook)
+                               You mystically acquire these proficiencies by drawing them from shared elven memory, and you retain them until you finish your next long rest.
+                               
+                               
+                               
+   - - Autognome Abilities:
+       - Armored Casing: You are encased in thin metal or some other durable material. While you aren’t wearing armor, your base Armor Class is 13 + your Dexterity modifier.
+       - Built for Success: You can add a d4 to one attack roll, ability check, or saving throw you make, and you can do so after seeing the d20 but before the effects of the roll are resolved. You can use this trait a number 
+                            of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
+       - Mechanical Nature: You have resistance to poison damage and immunity to disease, and you have advantage on saving throws against being paralyzed or poisoned. You don’t need to eat, drink, or breathe.
+       - Sentrys Rest: When you take a long rest, you spend at least 6 hours in an inactive, motionless state, instead of sleeping. In this state, you appear inert, but you aren’t unconscious.
+       - Specialized Design: You gain two tool proficiencies of your choice.
+       - True Life: If the mending spell is cast on you, you can expend a Hit Die, roll it, and regain a number of hit points equal to the roll plus your Constitution modifier (minimum of 1 hit point). In addition, your creator
+                    designed you to benefit from common spells that preserve life but that normally don’t affect Constructs; cure wounds, healing word, and spare the dying
+                    
+                    
+                    
+   - - Giff Abilities:
+       - Damage Dealer: Like a hippopotamus in a crystalware shop, you are naturally adept at damaging things. When you roll a 1 on a damage die for a melee attack, you can reroll the die and use the new roll. You can do so no 
+                        more than once per turn.
+       - Hippo Build: You have advantage on Strength-based ability checks and Strength saving throws. In addition, you count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
+       
+       
+       
+   - - Hadozee Abilities:
+       - Dexterous Feet: You can take the Use an Object action as a bonus action.
+       - Glide: If you are not incapacitated or wearing heavy armor, you can extend your skin membranes and glide. When you do so, you can perform the following aerial maneuvers
+                - When you fall, you can move up to 5 feet horizontally for every 1 foot you descend.
+                - When you would take damage from a fall, you can use your reaction to reduce the fall’s damage to 0.
+                
+                
+                
+   - - Plasmoid Abilities:
+       - Amorphous: You can squeeze through a space as narrow as 1 inch wide, provided you are wearing and carrying nothing. You also have advantage on ability checks you make to initiate or escape a grapple.
+       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light and in darkness as if it were dim light. You discern colors in that darkness only as shades of gray.
+       - Hold Breath: You can hold your breath for 1 hour.
+       - Natural Resilience: You have resistance to acid and poison damage, and you have advantage on saving throws against being poisoned.
+       - Shape Self: If you are not incapacitated, you can reshape your body to give yourself a head, one or two arms, one or two legs, and makeshift hands and feet, or you can revert to a limbless blob (no action required). As
+                     a bonus action, you can extrude a pseudopod that is up to 6 inches wide and 10 feet long or reabsorb it into your body. You can use this pseudopod to manipulate an object, open an unlocked door or container,
+                     stow or retrieve an item from an open container, or pour out the contents of a container. The pseudopod can’t attack, activate magic items, or carry more than 10 pounds.
+                     
+                     
+                     
+   - - Thri-Kreen Abilities:
+       - Chameleon Carapace: While you aren’t wearing armor, your carapace gives you a base Armor Class of 13 + your Dexterity modifier. As an action, you can change the color of your carapace to match the color and texture of 
+                             your surroundings, giving you advantage on Dexterity (Stealth) checks made to hide in those surroundings.
+       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light and in darkness as if it were dim light. You discern colors in that darkness only as shades of gray.
+       - Secondary Arms: You have two slightly smaller secondary arms below your primary pair of arms. The secondary arms function like your primary arms, with the following exceptions 
+                         - You can use a secondary arm to wield a weapon that has the light property, but you can’t use a secondary arm to wield other kinds of weapons.
+                         - You can’t wield a shield with a secondary arm
+       - Sleepless Revitalization: You do not require sleep and can choose to remain conscious during a long rest, though you must still refrain from strenuous activity to gain the benefit of the rest.
+       - Thri-Kreen Telepathy: You have the magical ability to communicate mentally with any number of willing creatures you can see within 120 feet of you. A contacted creature doesn’t need to share a language with you, but it
+                               must be able to understand at least one language. Your telepathic link to a creature is broken if you and the creature move more than 120 feet apart, if either of you is incapacitated, or if 
+                               either of you mentally breaks the contact (no action required).
