--- a/npcs/captain_doomsmith_stumptooth.yaml
+++ b/npcs/captain_doomsmith_stumptooth.yaml
@@ -1,3 +1,71 @@
+﻿#
+# Vibrant Games NPC file format.
+#
+# For long fields, we should be able to embed <html-tag>...</html-tag>s,
+# if everyone is cool with that approach.  OR we could use markdown instead.
+#
+# HTML requires more discipline -- we need to come up with a CSS stylesheet,
+# and stick to using the styles defined in our stylesheet.  Markdown is
+# simpler, because we can convert and automagically apply the stylesheet.
+#
+# Long fields are of the form:
+#
+#     field: |
+#       TEMPLATE
+#       MORE TEMPLATE
+#
+# For example, with HTML tags:
+#
+#     field: |
+#       <p> Gorbonzonger the goblin is a very bad goblin.
+#       He likes to beat up kobolds. </p>
+#       <p class="small"> Kobolds deserve it, anyway. </p>
+#       <p> Gorbonzonger has an amulet made of camphor
+#       and a very long shopping list that contains many
+#       items, some very few of which include: </p>
+#       <ul>
+#       <li> toilet paper </li>
+#       <li> broccoli </li>
+#       </ul>
+#
+# Or with Markdown:
+#
+#     field: |
+#       Gorbonzonger the goblin is a very bad goblin.  He likes to beat up kobolds.
+#       Kobolds deserve it, anyway.
+#       Gorbonzonger has an amulet made of camphor and a very long shopping list that contains many items, some very few of which include:
+#       - toilet paper
+#       - broccoli
+#
+# (There might be other formatting systems worth considering, too!)
+#
+
+#
+# Currently there is no schema for this template.
+# It will take some time to create a validating schema, so that,
+# for example, many fields are optional, but some fields are
+# required; enumerated fields are only allowed to have certain
+# values; and so on.
+#
+# Once the validating schema is created (probably using
+# Open API syntax, unless anyone has any preferences), we'll
+# be able to validate submissions and accept / reject if we choose.
+#
+# Also the validating file format is the ONLY place we do
+# content validation.  The database and user interface remain
+# agnostic to the validation rules (although the submission
+# UI will be set up to make it easy to e.g. pull down enumerated
+# values).  This allows us to change the schema in ONE PLACE
+# ONLY, not have to modify multiple components (UI, database,
+# future mobile apps, etc).  The file format validator is
+# the arbiter of what's allowed and what isn't.
+#
+
+#
+# Template NPC:
+#
+
+---
 
 #
 # Preliminary fields that describe this overall file:
@@ -20,28 +88,22 @@ metadata:
   #
   # The name of the submitter (your name).
   #
-  author: vibrantgames
+  author: Mike Rigby
 
   #
   # Email address of the submitter.
   #
-  # WordPress to YAML conversion:
-  # Unfortunately I do not see the author email
-  # addresses anywhere in the export file.  :(
-  # I guess we decided it was not an important field.
-  # This was a pretty bad oversigh.  :(
-  #
-  email: UNKNOWN@example.com
+  email: rigbyma@hotmail.com
 
   #
   # Date the NPC was created.
   # Must be in ISO 8601 format.
   # You can include the time if you want.
   #
-  # E.g. 2021-12-31
-  #      2021-12-31 23:59:59
+  # E.g. "2021-12-31"
+  #      "2021-12-31 23:59:59"
   #
-  date: 2021-01-31 21:43:40
+  date: "2021-05-15"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -51,7 +113,9 @@ metadata:
   # Optional.
   #
   labels:
-  - wordpress_id: 1168
+  - label_template_1: TEMPLATE
+  - label_template_2: TEMPLATE
+  - label_template_3: TEMPLATE
 
   #
   # In future more metadata will likely be needed.
@@ -82,7 +146,7 @@ npc:
   # For now let us keep all images in one directory,
   # at least until that becomes a scaling nightmare.
   #
-  # image: NO_ARTWORK_AT_TIME_OF_CONVERSION
+  image: TEMPLATE_McTEMPLATESON.jpg
 
   #
   # Race, class, etc.
@@ -123,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: half-orc
+    race: Half-Orc
 
     #
     # The sub-race can be anything.
@@ -132,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    # sub-race: NONE.
+    sub-race: N/A
 
     #
     # Pronouns (case insensitive):
@@ -152,6 +216,7 @@ npc:
     #
     occupation:
     - Pirate
+    
 
     #
     # D & D classes (case insensitive):
@@ -159,7 +224,7 @@ npc:
     # - artificer
     # - barbarian
     # - bard
-    # - bloodhunter
+    # - blood hunter
     # - cleric
     # - druid
     # - fighter
@@ -174,7 +239,30 @@ npc:
     #
     # Required.
     #
-    class: rogue
+    class: Rogue
+
+    #
+    # D & D subclasses (case insensitive):
+    # - civilian
+    # - alchemist
+    # - Path of the Berserker
+    # - College of Lore
+    # - Order of the Profane Soul
+    # - Grave Domain
+    # - Cirlce of the Moon
+    # - Battle Master
+    # - Way of Shadow
+    # - Oath of Redemption
+    # - Gloom Stalker
+    # - Thief
+    # - Path of the Spirit
+    # - Aberrant Mind
+    # - Hexblade
+    # - School of Abjuration
+    #
+    # Required.
+    #
+    subclass: Swashbuckler
 
     #
     # Class level.
@@ -199,7 +287,7 @@ npc:
     #
     # Required.
     #
-    alignment: chaotic neutral
+    alignment: Chaotic Neutral
 
     #
     # Alignment tendencies:
@@ -207,6 +295,9 @@ npc:
     #
     # Optional.
     #
+    tendencies:
+    - N/A
+
 
     #
     # Languages the character speaks
@@ -224,6 +315,7 @@ npc:
     - Orcish
     - Thieve's Cant
 
+
     #
     # Factions:
     # These should be ids of factions (similar YAML file format, eventually).
@@ -235,8 +327,7 @@ npc:
     #   role: Associate Professor of Lockpicking
     # - id: union_of_seamstresses
     #   name: Union of Seamstresses
-    #   role: Window dressing
-    # - id: cult_of_sky_anthologies
+    #   role: Window dressing    # - id: cult_of_sky_anthologies
     #   name: Cult of Sky Anthologies
     #   role: Going Clear Sky pastor
     #
@@ -247,12 +338,18 @@ npc:
       name: The Skurge's Crew
     - id: possibly_a_thieve_s_guild
       name: Possibly a Thieve's Guild
+      role: Captain
+
 
     #
     # Adjectives or other tags that can be used for searching.
     #
     # Optional.  0 or more.
     #
+    adjectives:
+    - Bloodthirsty
+    - Deranged
+    - Deceiptful
 
   improv:
 
@@ -267,7 +364,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction: A ship crashes out of the fog into the side of your boat, A large Half-Orc at the helm shouting "Prepare to Board!"
+    introduction:  A ship crashes out of the fog into the side of your boat, A large Half-Orc at the helm shouting "Prepare to Board!"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -278,7 +375,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   A Massive Figure dressed in leathers &amp; pirate robes with a big captain's hat with feathers and one long tusk protruding
+    appearance:   A Massive Figure dressed in leathers and pirate robes with a big captain's hat with feathers and one long tusk protruding
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -294,7 +391,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions: $characters$ "Prepare to be boarded". "Well what kind of treats have we here mateys?", "Feed them to the sharks!"
+    expressions:  "Prepare to be boarded". "Well what kind of treats have we here mateys?", "Feed them to the sharks!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -318,7 +415,7 @@ npc:
     #
     motivations: |
       Booty and violence for the sake of booty and violence
-
+      
     #
     # Passions:
     #
@@ -327,7 +424,7 @@ npc:
     #
     passions: |
       Pirate history. He's a fanboy for famous the pirates that came before him and really wants to be them
-
+      
     #
     # Vulnerabilities:
     #
@@ -336,16 +433,16 @@ npc:
     #
     vulnerabilities: |
       His ego and his intelligence. He's not the brightest bulb and he fakes much of his confidence
-
+      
     #
     # Secrets:
     #
     # Required.
     # ???Maximum length???
     #
-    secrets: |
-      His real name is Wendell Smitty and he was born in a wealthy suburb
-
+    secrets: His real name is Wendell Smitty and he was born in a wealthy suburb
+       
+      
   #
   # The D & D stats block:
   # All integers.
@@ -353,13 +450,13 @@ npc:
   stats:
     armour-class: 14
     hit-points: 76
-    speed: 25
+    speed: 30
     str: 18
     dex: 15
     con: 16
-    int: 9
+    int: 9 
     wis: 10
-    cha: 12
+    cha: 17
 
   #
   # Special characteristics.
@@ -370,23 +467,39 @@ npc:
   #
   specialties:
     skills:
-    - He's one hell of a sailor
-    special-abilities: |
-      Sneak Attack, Cunning Action, Uncanny Dodge, Evasion
-      |
-      Fancy Footwork, Rakish Audacity, Panache
-      |
-      Darkvision, Menacing, Relentless Endurance, Savage Attacks
+   - - Half-Orc Abilities:
+       - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray..           
+       - Menacing: gain proficiency in the Intimidation skill 
+       - Relentless Endurance: When reduced to 0 Hit Points but not killed outright, can drop to 1 hit point instead. Can’t use this feature again until you finish a Long Rest.
+       - Savage Attack: When he scores a critical hit with a melee weapon Attack, he can roll one of the weapon’s damage dice one additional time and add it to the extra damage of the critical hit.
+       
+   - - Rogue Abilities:
+       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
+       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
+       - Evasion: When subjected to an Effect that allows him to make a Dexterity saving throw to take only half damage, he instead take no damage if he succeeds on the saving throw, and only half damage if he fails       
+
+   - - Swashbuckler Abilities:
+       - Fancy Footwork: During your turn, if you make a melee attack against a creature, that creature can't make opportunity attacks against you for the rest of your turn
+       - Rakish Audacity: can give yourself a bonus to your initiative rolls equal to your Charisma modifier. You also gain an additional way to use your Sneak Attack; you don't need advantage on the attack roll to use 
+                          your Sneak Attack against a creature if you are within 5 feet of it, no other creatures are within 5 feet of you, and you don't have disadvantage on the attack roll. All the other rules for Sneak 
+                          Attack still apply to you.
+       - Panache: As an action, you can make a Charisma (Persuasion) check contested by a creature's Wisdom (Insight) check. The creature must be able to hear you, and the two of you must share a language. If you succeed on 
+                  the check and the creature is hostile to you, it has disadvantage on attack rolls against targets other than you and can't make opportunity attacks against targets other than you. This effect lasts for 1 
+                  minute, until one of your companions attacks the target or affects it with a spell, or until you and the target are more than 60 feet apart. If you succeed on the check and the creature isn't hostile to you, 
+                  it is charmed by you for 1 minute. While charmed, it regards you as a friendly acquaintance. This effect ends immediately if you or your companions do anything harmful to it.       
+
+    special-abilities:
+    - Proficiencies: Persuasion; Medecine; Insight; Perception    
     attacks: |
-      Cutlass
-      |
-      Knife
+      2 Attacks with his Cutlass or Knife
     combat-tactics: |
       Sneak Attacks when possible, but will go headlong into melee if forced
     special-equipment:
     - Sailor's Ear Stud
     - Sailor's Earring
-
+                                                                   
   profile:
 
     #
@@ -397,8 +510,11 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Growing up in a wealthy port-side community, Doomsmith heard many stories about the audacious raids of local pirates. He thus became fascinated with pirates at an early age. His parents paid for yachting lessons for him and encouraged hobby and role playing. When his parents died in a tragic carriage accident, Doomsmith cracked, stole a ship, renamed it "The Skurge" and headed out to see. He used what was left of his parents' monies to recruit a loyal crew and head off to emulate his childhood hero's.  In the time since, he has developed a reputation for ruthlessness if not necessarily efficiency. He is definitely not fond of anyone calling his bluff.
+      Growing up in a wealthy port-side community, Doomsmith heard many stories about the audacious raids of local pirates. He thus became fascinated with pirates at an early age. His parents paid for yachting lessons for him 
+      and encouraged hobby and role playing. When his parents died in a tragic carriage accident, Doomsmith cracked, stole a ship, renamed it "The Skurge" and headed out to see. He used what was left of his parents' monies to 
+      recruit a loyal crew and head off to emulate his childhood hero's.  In the time since, he has developed a reputation for ruthlessness if not necessarily efficiency. He is definitely not fond of anyone calling his bluff.
 
+      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -407,7 +523,8 @@ npc:
     # Required.
     # No length limit for now.
     #
-
+    personality: |
+      A Massive Figure dressed in leathers and pirate robes with a big captain's hat with feathers and one long tusk protruding. He's full of bluster and bloodlust, embracing the role he's picked for himself
   #
   # Content that does not get displayed, but could be useful
   # to humans.  Includes review comments, notes about what to
@@ -416,6 +533,24 @@ npc:
   # Optional.
   #
   uncategorized:
-  - wp:status: publish
-  - _yoast_wpseo_focuskeywords: []
-  - _yoast_wpseo_keywordsynonyms: [""]
+  - uncategorized_template_1: TEMPLATE
+  - uncategorized_template_2: |
+    TEMPLATE
+    MORE TEMPLATE
+  - uncategorized_template_3: TEMPLATE
+---
+
+#
+# ...Multiple NPCs can be included in one file,
+# separated by --- dividers...
+#
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
